//
//  Strings.swift
//  store-app
//
//  Created by Rajnish Sharma on 16/02/23.
//

import Foundation

class Strings {
    static let filer: String = "Filter"
    static let explore: String = "Explore"
    static let mrp: String = "MRP:"
    static let search: String = "Search"
    
    // Messages
    static let errorMessage = "No store found!"
    static let comingSoon = "Coming soon..."
    
    // Colors
    static let headerBackgroundColor = "HeaderBackground"
    static let filterTextColor = "FilterText"
    static let tabBackgroundColor = "TabBackground"
    static let unselectedTabButtonBackgroundColor = "UnselectedTabButton"
    static let tabButtonColor = "TabButton"
    static let dividerColor = "Divider"
    static let tableBackgroundColor = "TableBackground"
    static let collectionBackgroundColor = "CollectionBackground"
    static let itemColor = "Item"
    static let priceColor = "Price"
    static let mrpPlaceholderColor = "MrpPlaceholder"
    static let extraColor = "Extra"
    
    // Images
    static let tabButtonImage = "tabButton.png"
    static let activeTabButtonImage = "activeTabButtonImage.png"
    static let placeholderImage = "storePlaceholder.png"
}
