...
    /// Api Service to mock the store data response
    func getStoreData() async throws -> StoreModel {
        return StoreModel(status: "Success",
                          error: nil,
                          data: StoreData(
                            items: [
                                ItemModel(name: "Item 1", price: "₹ 100", extra: "Same day shipping", image: ""),
                                ItemModel(name: "Item 2", price: "₹ 400", extra: "Same day shipping", image: ""),
                                ItemModel(name: "Item 3", price: "₹ 100", extra: nil, image: ""),
                                ItemModel(name: "Item 4", price: "₹ 80", extra: nil, image: ""),
                                ItemModel(name: "Item 5", price: "₹ 190", extra: nil, image: ""),
                                ItemModel(name: "Item 6", price: "₹ 70", extra: nil, image: ""),
                                ItemModel(name: "Item 7", price: "₹ 190", extra: nil, image: ""),
...
