...
        /// Setting up layouts
        setupTableView()
        
        /// Setting up pull to request
        setupPullToRefresh()
        
        myTableView?.accessibilityIdentifier = "MainTableView"
    }
    
    // MARK: - Setup Slider
    /// Setup Slider
    private func setupSlider() {
        let maxValue = storeItems.count
...
