...
        
        /// Setting up layouts
        setupCollectionView()
        
        /// Setting up pull to request
        setupPullToRefresh()
        myCollectionView?.accessibilityIdentifier = "MainCollectionView"
    }
    
    // MARK: - Setup Slider
    /// Setup Slider
    private func setupSlider() {
        slider.minimumValue = 0
...
